src/objects/Vendor_Receiving_Group__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
	    <fullName>Discount__c</fullName>
	    <defaultValue>0.00</defaultValue>
	    <label>Discount</label>
	    <precision>5</precision>
	    <scale>2</scale>
	    <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Receiving_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needed_By__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ignore_Current_Cost_Update__c</fullName>
	    <defaultValue>false</defaultValue>
	    <description>In order to ignore part cost update when user actions learn more button and make changes in current VRG cost update setting from true to false on modal, we turn this flag ON considering that while finalizing receiving we will ignore this group from updating part cost.</description>
	    <inlineHelpText>To ignore part current cost update while finalizing vendor receiving.</inlineHelpText>
	    <label>Ignore Current Cost Update</label>
	    <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Order_As_Individual_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Order As Individual Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Order_Lot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Order Lot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Packaged_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Packaged Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Lots__c</fullName>
        <label>Order Lots</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Qty__c</fullName>
        <label>Package Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>   
    <fields>
        <fullName>Package_Unit__c</fullName>
        <label>Package Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Vendor Receiving Group Parts</relationshipLabel>
        <relationshipName>Vendor_Receiving_Group_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Cost__c</fullName>
        <description>For packaged part it will be the cost of 1 package and for non-packaged part or sublet  it will be the cost of individual item (Cost__c)</description>
        <inlineHelpText>For packaged part it will be the cost of 1 package and for non-packaged part or sublet it will be the cost of individual item (Cost__c)</inlineHelpText>
        <label>Per Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recieved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recieved</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Vendor Receiving Groups</relationshipLabel>
        <relationshipName>Vendor_Receiving_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sublet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sublet Type Vendor Product</description>
        <label>Sublet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Sublet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Vendor Receiving Groups</relationshipLabel>
        <relationshipName>Vendor_Receiving_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Header__c</fullName>
        <label>Vendor Receiving Header</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>Vendor Receiving Groups</relationshipLabel>
        <relationshipName>Vendor_Receiving_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Update_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To track if user changed cost update setting or not.</description>
        <inlineHelpText>To track if user changed cost update setting or not.</inlineHelpText>
        <label>Cost Update Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor Receiving Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Receiving_Header__c</columns>
        <columns>Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Receiving Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>